--- a/finish/pom.xml
+++ b/finish/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.openliberty.guides</groupId>
-    <artifactId>guide-getting-started</artifactId>
+    <artifactId>guide-finished</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
